src/objects/Apttus_Config2__TempDisplayColumn__c.object
<CustomObject>
    <description>Holds information about columns displayed in the cart view</description>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>The display field API name</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FormatStyleClass__c</fullName>
        <description>Holds the System Style classes applied to dynamic columns</description>
        <inlineHelpText>Holds the System Style classes applied to dynamic columns</inlineHelpText>
        <label>Style Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the column allows its value to be edited.</description>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the column is enabled</description>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the column is visible</description>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Temp Display Column</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Display Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>